--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">News Feed</string>
+    <string name="title_main_activity">News Feed</string>
 </resources>
