added layout change on orientation change.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">News Feed</string>
     <string name="title_main_activity">News Feed</string>
+    <string translatable="true" name="label_title">Tile:</string>
+    <string translatable="true" name="label_section">Section:</string>
+    <string translatable="true" name="label_date_of_publication">Date of Publication:</string>
 </resources>
